--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/test/java" output="target/test-classes" including="**/*.java"/>
-  <classpathentry kind="src" path="src/test/resources" output="target/test-classes" excluding="**/*.java"/>
   <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
-  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
   <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
   <classpathentry kind="var" path="M2_REPO/io/vertx/vertx-core/3.7.1/vertx-core-3.7.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/io/netty/netty-common/4.1.34.Final/netty-common-4.1.34.Final.jar"/>
   <classpathentry kind="var" path="M2_REPO/io/netty/netty-buffer/4.1.34.Final/netty-buffer-4.1.34.Final.jar"/>
@@ -31,4 +28,6 @@
   <classpathentry kind="var" path="M2_REPO/org/mongodb/mongodb-driver-async/3.10.1/mongodb-driver-async-3.10.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mongodb/bson/3.10.1/bson-3.10.1.jar"/>
   <classpathentry kind="var" path="M2_REPO/org/mongodb/mongodb-driver-core/3.10.1/mongodb-driver-core-3.10.1.jar"/>
+  <classpathentry kind="var" path="M2_REPO/org/mongodb/mongo-java-driver/3.6.3/mongo-java-driver-3.6.3.jar"/>
+  <classpathentry kind="var" path="M2_REPO/commons-io/commons-io/2.6/commons-io-2.6.jar"/>
 </classpath>
