--- a/.settings/org.eclipse.jdt.core.prefs
+++ b/.settings/org.eclipse.jdt.core.prefs
@@ -1,10 +1,11 @@
-<<<<<<< HEAD
-=======
-#Mon May 27 09:39:44 CEST 2019
-org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
->>>>>>> 2fa645fe63e62b505fbc10dbd035c1080558b555
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
+>>>>>>>=2fa645fe63e62b505fbc10dbd035c1080558b555
 eclipse.preferences.version=1
 org.eclipse.jdt.core.compiler.codegen.targetPlatform=1.8
 org.eclipse.jdt.core.compiler.compliance=1.8
+org.eclipse.jdt.core.compiler.problem.enablePreviewFeatures=disabled
 org.eclipse.jdt.core.compiler.problem.forbiddenReference=warning
+org.eclipse.jdt.core.compiler.problem.reportPreviewFeatures=ignore
+org.eclipse.jdt.core.compiler.release=disabled
 org.eclipse.jdt.core.compiler.source=1.8
